--- a/warehouse/pom.xml
+++ b/warehouse/pom.xml
@@ -4,28 +4,26 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.3.RELEASE</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>com.example</groupId>
+    <artifactId>crypto-hash</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
   </parent>
   <groupId>com.example</groupId>
-  <artifactId>crypto-hash</artifactId>
+  <artifactId>warehouse</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>crypto-hash</name>
-  <packaging>pom</packaging>
-  <description>Demo project showing usage of hash functions</description>
+  <name>warehouse</name>
+  <description>Warehous project</description>
 
   <properties>
     <java.version>11</java.version>
   </properties>
 
-  <modules>
-    <module>payments</module>
-    <module>warehouse</module>
-  </modules>
-
   <dependencies>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -42,16 +40,8 @@
   <build>
     <plugins>
       <plugin>
-        <groupId>com.diffplug.spotless</groupId>
-        <artifactId>spotless-maven-plugin</artifactId>
-        <version>2.0.2</version>
-        <configuration>
-          <java>
-            <googleJavaFormat>
-              <version>1.8</version>
-            </googleJavaFormat>
-          </java>
-        </configuration>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
