Add warehouse example generation

--- a/warehouse/pom.xml
+++ b/warehouse/pom.xml
@@ -12,28 +12,20 @@
   <artifactId>warehouse</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>warehouse</name>
-  <description>Warehous project</description>
-
-  <properties>
-    <java.version>11</java.version>
-  </properties>
+  <description>Warehouse project</description>
 
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-test</artifactId>
-      <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.junit.vintage</groupId>
-          <artifactId>junit-vintage-engine</artifactId>
-        </exclusion>
-      </exclusions>
+      <artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-json</artifactId>
     </dependency>
   </dependencies>
 
